Fix Fml not detecting jar

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ archives_base_name = tweakedpetroleum
 
 # Boilerplate Options
 use_mixins = true
-use_coremod = false
+use_coremod = true
 use_assetmover = false
 
 # Coremod Arguments
 include_mod = true
-coremod_plugin_class_name = 
+coremod_plugin_class_name = srki2k.tweakedpetroleum.MixinLoader
