--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ dependencies {
 
     //Will switch to hei once its in the CR maven
     compileOnly fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302:api')
-    runtimeOnly fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302')
+    implementation fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302')
 
 
     //mods
