--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ has_access_transformer = false
 
 # Coremod Arguments
 include_mod = true
-coremod_plugin_class_name = srki2k.tweakedpetroleum.MixinLoader
+coremod_plugin_class_name = srki2k.tweakedpetroleum.core.TweakedPetroleumPlugin
