--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,20 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs = -Xmx3G
+org.gradle.daemon = false
 
 # Mod Information
 mod_version = 1.1
 mcversion = 1.12.2
 maven_group = srki2k
 archives_base_name = tweakedpetroleum
+
+
+# Optionial Jar compiling
+build_deobfJar = false
+build_apiJar = false
+build_sourceJar = true
+
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
