--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ fancyGradle {
 version = project.mod_version
 mcversion = project.mcversion
 group = project.maven_group
-archivesBaseName = project.archives_base_name + '-1.12.2'
+archivesBaseName = project.archives_base_name
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
