--- a/settings.gradle
+++ b/settings.gradle
@@ -2,11 +2,12 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven {
+            name 'FancyGradle'
             url 'https://gitlab.com/api/v4/projects/26758973/packages/maven'
         }
         maven {
-            name 'MinecraftForge'
-            url 'https://maven.minecraftforge.net/'
+            name 'ForgeGradle 5'
+            url 'https://maven.minecraftforge.net'
         }
     }
 }
