--- a/.github/workflows/curseforge_release.yml
+++ b/.github/workflows/curseforge_release.yml
@@ -50,7 +50,7 @@ jobs:
           release_type: "release"
           changelog: "Changelog is available [here](https://github.com/${{ github.repository }}/releases/tag/v${{ steps.get_version.outputs.version }})."
           changelog_type: "markdown"
-          relations: "tweaked-lib:requiredDependency,mixin-booter:requiredDependencyimmersive-petroleum:requiredDependency,had-enough-items:optionalDependency,crafttweaker:optionalDependency"
+          relations: "tweaked-lib:requiredDependency,mixin-booter:requiredDependency,immersive-petroleum:requiredDependency,had-enough-items:optionalDependency,crafttweaker:optionalDependency"
           file_path: "${{ steps.get_mod_name.outputs.mod_name }}-${{ steps.get_version.outputs.version }}.jar"
           project_id: "${{ secrets.CURSEFORGE_PROJECT_ID }}"
           token: "${{ secrets.CURSEFORGE_API_KEY }}"
