--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ plugins {
 
 apply {
     plugin 'net.minecraftforge.gradle'
+    plugin 'org.spongepowered.mixin'
     plugin 'java'
     plugin 'idea'
 }
@@ -54,7 +55,7 @@ minecraft {
     }
     runs {
         client {
-            workingDirectory project.file('run/client')
+            workingDirectory project.file('run')
             if (project.use_coremod.toBoolean()) {
                 jvmArg '-Dfml.coreMods.load=' + coremod_plugin_class_name
             }
@@ -69,13 +70,14 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file('run/server')
+            workingDirectory project.file('run')
             if (project.use_coremod.toBoolean()) {
                 jvmArg '-Dfml.coreMods.load=' + coremod_plugin_class_name
             }
             if (project.use_mixins.toBoolean()) {
                 jvmArg '-Dmixin.hotSwap=true'
                 jvmArg '-Dmixin.checks.interfaces=true'
+                jvmArg '-Dmixin.debug=true'
             }
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
@@ -110,15 +112,25 @@ repositories {
         name = "Progwml6 maven"
         url = "https://dvs1.progwml6.com/files/maven/"
     }
-
+    new File("./GitJars/libs").list().collect().forEach { s ->
+        flatDir {
+            dirs "./GitJars/libs/${s}/build/libs"
+        }
+    }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
 
+    implementation "srki2k:TweakedLib:${project.tweaked_lib_version}"
+
     implementation 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.679'
     implementation fg.deobf('curse.maven:ImmersiveEngineering-231951:2974106')
     implementation fg.deobf('curse.maven:ImmersivePetroleum-268250:3382321')
+
+    //implementation fg.deobf('curse.maven:GroovyScript-687577:4033033')
+    //fg5 compatible version of groovyscript
+    implementation fg.deobf (files("/mods/groovyscript-0.0.1.jar"))
 
     //AdvancedRocketry
     implementation fg.deobf('curse.maven:AdvancedRocketry-236542:3801020')
@@ -131,9 +143,10 @@ dependencies {
     compileOnly('zone.rong:mixinbooter:5.0')
     runtimeOnly('zone.rong:mixinbooter:5.0')
 
+    annotationProcessor "org.spongepowered:mixin:0.8.2:processor"
 }
 
-git {
+/*git {
     def props = new Properties()
     new File("${project.projectDir}/gradle.properties").withInputStream { props.load(it) }
 
@@ -141,34 +154,14 @@ git {
         name 'TweakedLib'
         commit "v${props.getProperty('tweaked_lib_version')}"
     }
-}
+}*/
 
 sourceSets {
     main {
         if (project.use_mixins.toBoolean()) {
             ext.refMap = 'mixins.' + archives_base_name + '.refmap.json'
         }
-
-        java {
-            srcDirs = ["src/main/java"]
-        }
-
-        resources {
-            srcDirs = ["src/main/java", "src/main/resources"]
-        }
     }
-
-    test {
-        java {
-            srcDirs = ["src/test/java"]
-        }
-        resources {
-            srcDirs = ["src/test/resources"]
-        }
-    }
-
-    // at compile time, put resources in same directories as classes
-    main.output.setResourcesDir(main.java.classesDirectory)
 }
 
 
