Move build system maven local

--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -50,8 +50,8 @@ jobs:
       - name: Build mod dep with Gradle
         run: |
           cd ./GitJars
-          chmod +x build.gradle
-          ./build.gradle
+          chmod +x gradlew
+          ./gradlew publishToMavenLocal
 
       - name: Build mod with Gradle
         run: |
