--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,10 @@ org.gradle.jvmargs = -Xmx3G
 org.gradle.daemon = false
 
 # Mod Information
-tweaked_lib_version = 1.0.1.10
+tweaked_lib_version = 1.0.1.12
+groovy_script_version = 0.0.1
 
-mod_version = 1.3.1
+mod_version = 1.3.2
 maven_group = srki2k
 archives_base_name = tweakedpetroleum
 
