--- a/build.gradle
+++ b/build.gradle
@@ -268,6 +268,13 @@ artifacts {
     }
 }
 
+
+task setGitTag(){
+    def tagName = "v${project.version}"
+    ("git tag $tagName").execute()
+    ("git push --tags").execute()
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
