--- a/build.gradle
+++ b/build.gradle
@@ -122,9 +122,7 @@ dependencies {
 
     //Maven local
     implementation "srki2k:TweakedLib:${project.tweaked_lib_version}"
-    implementation("com.cleanroommc:GroovyScriptFg5:${project.groovy_script_version}") {
-        transitive = false
-    }
+    implementation("com.cleanroommc:GroovyScriptFg5:${project.groovy_script_version}") { transitive = false }
 
     implementation 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.679'
     implementation fg.deobf('curse.maven:ImmersiveEngineering-231951:2974106')
@@ -277,7 +275,7 @@ task setGitTag() {
         return
     }
 
-    project.logger.lifecycle('Pushing tag{}',tagName)
+    project.logger.lifecycle('Pushing tag{}', tagName)
     ("git tag $tagName").execute()
     ("git push --tags").execute()
 }
