Switch to retrofuturagradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,20 +10,15 @@ mod_version = 1.3.0
 maven_group = srki2k
 archives_base_name = tweakedpetroleum
 
-
-# Optionial Jar compiling
-build_deobfJar = false
-build_apiJar = false
-build_sourceJar = true
-
-
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
 # Boilerplate Options
 use_mixins = true
 use_coremod = true
 use_assetmover = false
-has_access_transformer = false
+
+# Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
+use_access_transformer = false
 
 # Coremod Arguments
 include_mod = true
