--- a/build.gradle
+++ b/build.gradle
@@ -1,94 +1,58 @@
-buildscript {
-    repositories {
-        maven {
-            name 'MixinGradle'
-            url 'https://repo.spongepowered.org/repository/maven-public'
-        }
-    }
-    dependencies {
-        if (project.use_mixins.toBoolean()) {
-            classpath 'org.spongepowered:mixingradle:0.7.+'
-        }
-    }
-}
+import com.gtnewhorizons.retrofuturagradle.mcp.ReobfuscatedJar
+import org.jetbrains.gradle.ext.Gradle
 
 plugins {
-    id 'net.minecraftforge.gradle' version '5.1.+'
-    id 'wtf.gofancy.fancygradle' version '1.1.+'
-    id 'io.github.srdjan-v.local-git-dependency' version '0.1'
-}
-
-apply {
-    plugin 'net.minecraftforge.gradle'
-    plugin 'org.spongepowered.mixin'
-    plugin "maven-publish"
-    plugin 'java'
-    plugin 'idea'
-}
-
-fancyGradle {
-    patches {
-        resources
-        coremods
-        asm
-        codeChickenLib
-    }
+    id("java")
+    id("java-library")
+    id("maven-publish")
+    id("org.jetbrains.gradle.plugin.idea-ext") version "1.1.7"
+    id("eclipse")
+    id("com.gtnewhorizons.retrofuturagradle") version "1.3.9"
+    id("com.matthewprenger.cursegradle") version "1.4.0"
+    id('io.github.srdjan-v.local-git-dependency') version '0.4.1'
 }
 
 version = project.mod_version
 group = project.maven_group
 archivesBaseName = project.archives_base_name
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8)
-
-idea {
-    module {
-        downloadJavadoc = true
-        downloadSources = true
+// Set the toolchain version to decouple the Java we run Gradle with from the Java used to compile and run the mod
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+        // Azul covers the most platforms for Java 8 toolchains, crucially including MacOS arm64
+        vendor.set(JvmVendorSpec.AZUL)
     }
+    // Generate sources and javadocs jars when building and publishing
+    withSourcesJar()
+    //withJavadocJar()
 }
 
 minecraft {
-
-    mappings channel: 'stable', version: '39-1.12'
-
-    if (project.has_access_transformer.toBoolean()) {
-        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    mcVersion = '1.12.2'
+    def args = ["-ea:${project.group}"]
+    if (project.use_coremod.toBoolean()) {
+        args << '-Dfml.coreMods.load=' + coremod_plugin_class_name
     }
-    runs {
-        client {
-            workingDirectory project.file('run/client')
-            if (project.use_coremod.toBoolean()) {
-                jvmArg '-Dfml.coreMods.load=' + coremod_plugin_class_name
-            }
-            if (project.use_mixins.toBoolean()) {
-                jvmArg '-Dmixin.hotSwap=true'
-                jvmArg '-Dmixin.checks.interfaces=true'
-                jvmArg '-Dmixin.debug=true'
-            }
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            environment 'MC_VERSION', '1.12.2'
-        }
-
-        server {
-            workingDirectory project.file('run/server')
-            if (project.use_coremod.toBoolean()) {
-                jvmArg '-Dfml.coreMods.load=' + coremod_plugin_class_name
-            }
-            if (project.use_mixins.toBoolean()) {
-                jvmArg '-Dmixin.hotSwap=true'
-                jvmArg '-Dmixin.checks.interfaces=true'
-            }
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            environment 'MC_VERSION', '1.12.2'
-        }
+    if (project.use_mixins.toBoolean()) {
+        args << '-Dmixin.hotSwap=true'
+        args << '-Dmixin.checks.interfaces=true'
+        args << '-Dmixin.debug.export=true'
     }
+    extraRunJvmArguments.addAll(args)
+
+    useDependencyAccessTransformers = true
+    injectedTags.put("VERSION", project.version)
+    injectedTags.put("TWEAKED_LIB_VERSION", tweaked_lib_version)
 }
 
+// Generate a my.project.Tags class with the version number as a field
+tasks.injectTags.configure {
+    outputClassName.set("${project.group}.${project.archives_base_name}.Tags")
+}
 
 repositories {
+    mavenCentral()
     maven {
         url = 'https://maven.cleanroommc.com'
     }
@@ -113,138 +77,154 @@ repositories {
         name = "Progwml6 maven"
         url = "https://dvs1.progwml6.com/files/maven/"
     }
+    mavenLocal()
+}
 
+configurations {
+    embed
+    implementation.extendsFrom(embed)
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
+    //Hwyla
+    implementation "curse.maven:hwyla-253449:2568751-sources-2568752-api-2568753"
 
     implementation 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.679'
-    implementation fg.deobf('curse.maven:ImmersiveEngineering-231951:2974106')
-    implementation fg.deobf('curse.maven:ImmersivePetroleum-268250:3382321')
+    implementation rfg.deobf('curse.maven:ImmersiveEngineering-231951:2974106')
+    implementation rfg.deobf('curse.maven:ImmersivePetroleum-268250:3382321')
 
     //AdvancedRocketry
-    implementation fg.deobf('curse.maven:AdvancedRocketry-236542:3801020')
-    implementation fg.deobf('curse.maven:Libvulpes-236541:3801015')
+    implementation rfg.deobf('curse.maven:AdvancedRocketry-236542:3801020')
+    implementation rfg.deobf('curse.maven:Libvulpes-236541:3801015')
 
-    compileOnly fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302:api')
-    runtimeOnly fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302')
+    //compileOnly rfg.deobf('mezz.jei:jei_1.12.2:4.16.1.302:api')
+    //runtimeOnly rfg.deobf('mezz.jei:jei_1.12.2:4.16.1.302')
     //implementation fg.deobf('curse.maven:had-enough-items-557549:3862733')
 
-    compileOnly('zone.rong:mixinbooter:5.0')
-    runtimeOnly('zone.rong:mixinbooter:5.0')
+    //enables java 17 features on java 8
+    annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:1.0.0'
+    compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:1.0.0'
+
+    if (project.use_assetmover.toBoolean()) {
+        implementation 'com.cleanroommc:assetmover:2.0'
+    }
+
+    if (project.use_mixins.toBoolean()) {
+        implementation 'zone.rong:mixinbooter:7.0'
+        api("org.spongepowered:mixin:0.8.3") { transitive = false }
+        annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
+        annotationProcessor 'com.google.guava:guava:24.1.1-jre'
+        annotationProcessor 'com.google.code.gson:gson:2.8.6'
+        annotationProcessor("org.spongepowered:mixin:0.8.3") { transitive = false }
+    }
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 }
 
 localGitDependency {
-    add 'https://github.com/Srdjan-V/TweakedLib.git', {
-        name 'TweakedLib'
-        tag 'v' + project.tweaked_lib_version
+    add('https://github.com/Srdjan-V/TweakedLib.git', {
+        oneTimeStartupTasks("setupCIWorkspace")
+        configuration("runtimeOnly")
+        enableIdeSupport true
+        mapSourceSets({
+            map "main", "main"
+        })
+        if (project.gradle.startParameter.taskNames[0] == 'build') {
+            tag 'v' + project.tweaked_lib_version
+        } else {
+            def currentBranch = ("git rev-parse --abbrev-ref HEAD").execute().inputStream.readLines().get(0)
+            if (currentBranch == "master") {
+                throw new RuntimeException()
+            }
+
+            branch 'develop'
+        }
+    })
+
+    add('https://github.com/CleanroomMC/HadEnoughItems.git', {
+        oneTimeStartupTasks("setupCIWorkspace")
+        commit "c9e735d3fdcc1ce89e5cef302f12baccd15339af" //version 4.24.2
+        configuration({
+            configuration("compileOnly")
+            include("mezz.jei:HadEnoughItems_1.12.2:4.24.2-api")
+        }, {
+            configuration("runtimeOnly")
+            include("mezz.jei:HadEnoughItems_1.12.2:4.24.2")
+        })
+    })
+}
+
+def mixinConfigRefMap = 'mixins.' + project.archives_base_name + '.refmap.json'
+def mixinTmpDir = buildDir.path + File.separator + 'tmp' + File.separator + 'mixins'
+def refMap = "${mixinTmpDir}" + File.separator + mixinConfigRefMap
+def mixinSrg = "${mixinTmpDir}" + File.separator + "mixins.srg"
+
+if (project.use_mixins.toBoolean()) {
+    tasks.named("reobfJar", ReobfuscatedJar).configure {
+        extraSrgFiles.from(mixinSrg)
+    }
+
+    tasks.named("compileJava", JavaCompile).configure {
+        doFirst {
+            new File(mixinTmpDir).mkdirs()
+        }
+        options.compilerArgs += [
+                "-AreobfSrgFile=${tasks.reobfJar.srg.get().asFile}",
+                "-AoutSrgFile=${mixinSrg}",
+                "-AoutRefMapFile=${refMap}",
+        ]
     }
 }
 
-sourceSets {
-    main {
-        if (project.use_mixins.toBoolean()) {
-            ext.refMap = 'mixins.' + archives_base_name + '.refmap.json'
+if (project.use_access_transformer.toBoolean()) {
+    for (File at : sourceSets.getByName("main").resources.files) {
+        if (at.name.toLowerCase().endsWith("_at.cfg")) {
+            tasks.deobfuscateMergedJarToSrg.accessTransformerFiles.from(at)
+            tasks.srgifyBinpatchedJar.accessTransformerFiles.from(at)
         }
     }
 }
 
-
 jar {
     manifest {
-        // noinspection GroovyAssignabilityCheck
         def attribute_map = [:]
         if (project.use_coremod.toBoolean()) {
             attribute_map['FMLCorePlugin'] = project.coremod_plugin_class_name
             if (project.include_mod.toBoolean()) {
                 attribute_map['FMLCorePluginContainsFMLMod'] = true
-                attribute_map['ForceLoadAsMod'] = project.gradle.startParameter.taskNames[0] == 'build'
+                attribute_map['ForceLoadAsMod'] = project.gradle.startParameter.taskNames[0] == "build"
             }
         }
-        if (project.use_mixins.toBoolean()) {
-            attribute_map['TweakClass'] = 'org.spongepowered.asm.launch.MixinTweaker'
+        if (project.use_access_transformer.toBoolean()) {
+            attribute_map['FMLAT'] = project.archives_base_name + '_at.cfg'
         }
         attributes(attribute_map)
     }
+    // Add all embedded dependencies into the jar
+    from(provider { configurations.embed.collect { it.isDirectory() ? it : zipTree(it) } })
 }
-
-jar.finalizedBy('reobfJar')
-
-
-import org.apache.tools.ant.filters.ReplaceTokens
-
-task filterTokens(type: Sync) {
-
-    inputs.property 'version', version
-    inputs.property 'tweaked_lib_version', tweaked_lib_version
-
-    from sourceSets.main.java
-    filter(ReplaceTokens, tokens: [VERSION: version.toString(), TWEAKEDLIB: tweaked_lib_version.toString()])
-    into "$buildDir/src/$sourceSets.main.name/$sourceSets.main.java.name"
-}
-
-compileJava.source = filterTokens.outputs
 
 processResources {
-    // required to allow file expansion later
-    duplicatesStrategy = 'include'
-
     // this will ensure that this task is redone when the versions change.
-    inputs.property 'version', version
-
+    inputs.property 'version', project.version
+    inputs.property 'mcversion', project.minecraft.version
     // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-
-        // replace version
-        expand 'version': version
+    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
+        // replace version and mcversion
+        fcd.expand(
+                'version': project.version,
+                //'mcversion': project.minecraft.version
+        )
     }
 
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+    if (project.use_access_transformer.toBoolean()) {
+        rename '(.+_at.cfg)', 'META-INF/$1' // Access Transformers
     }
-}
 
-if (project.build_deobfJar.toBoolean()) {
-    // Create deobf dev jars
-    task deobfJar(type: Jar) {
-        archiveClassifier.set("deobf")
-        from sourceSets.main.output
-    }
-}
-
-if (project.build_apiJar.toBoolean()) {
-    // Create API library jar
-    task apiZip(type: Jar) {
-        archiveClassifier.set("api")
-        from(sourceSets.main.java) {
-            include "name/api/**"
-        }
-        from(sourceSets.main.output) {
-            include "name/api/**"
-        }
-    }
-}
-
-if (project.build_sourceJar.toBoolean()) {
-    // Create source jar
-    task sourcesJar(type: Jar) {
-        archiveClassifier.set("sources")
-        from sourceSets.main.allJava
-    }
-}
-
-artifacts {
-    if (project.build_deobfJar.toBoolean()) {
-        archives deobfJar
-    }
-    if (project.build_apiJar.toBoolean()) {
-        archives apiZip
-    }
-    if (project.build_sourceJar.toBoolean()) {
-        archives sourcesJar
+    if (project.use_mixins.toBoolean()) {
+        // Embed mixin refmap
+        from refMap
+        dependsOn("compileJava")
     }
 }
 
@@ -263,7 +243,7 @@ tasks.register('updateGitVersionTag') {
 
         def invalid = true
         def smallestSizeArray = versionTagArray.size() > gitVersionTagArray.size() ? gitVersionTagArray.size() : versionTagArray.size()
-        for (i in 0..<smallestSizeArray ) {
+        for (i in 0..<smallestSizeArray) {
             if (versionTagArray.get(i) > gitVersionTagArray.get(i)) {
                 invalid = false
                 break
@@ -283,6 +263,64 @@ tasks.register('updateGitVersionTag') {
         ("git tag v${project.version}").execute()
         ("git push --tags").execute()
     }
+}
+
+idea {
+    module {
+        inheritOutputDirs = true
+        downloadJavadoc = true
+        downloadSources = true
+    }
+    project {
+        settings {
+            runConfigurations {
+                "1. Run Client"(Gradle) {
+                    taskNames = ["runClient"]
+                }
+                "2. Run Server"(Gradle) {
+                    taskNames = ["runServer"]
+                }
+                "3. Run Obfuscated Client"(Gradle) {
+                    taskNames = ["runObfClient"]
+                }
+                "4. Run Obfuscated Server"(Gradle) {
+                    taskNames = ["runObfServer"]
+                }
+            }
+            compiler.javac {
+                afterEvaluate {
+                    javacAdditionalOptions = "-encoding utf8"
+                    moduleJavacAdditionalOptions = [
+                            (project.name + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
+                    ]
+                }
+            }
+        }
+    }
+}
+
+tasks.named("processIdeaSettings").configure {
+    dependsOn("injectTags")
+}
+
+configure([tasks.compileJava]) {
+    options.encoding = "UTF-8"
+    sourceCompatibility = 17 // for the IDE support
+    options.release = 8
+
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+configure([tasks.javadoc]) {
+    javadocTool.set(javaToolchains.javadocToolFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    })
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
 
 publishing {
