--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.daemon = false
 tweaked_lib_version = 1.0.0
 
 mod_version = 1.3.0
-maven_group = srki2k
+maven_group = io.github.srdjanv
 archives_base_name = tweakedpetroleum
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
@@ -22,4 +22,4 @@ use_access_transformer = false
 
 # Coremod Arguments
 include_mod = true
-coremod_plugin_class_name = io.github.srdjanv.tweakedpetroleum.core.tweakedpetroleum.TweakedPetroleumPlugin
+coremod_plugin_class_name = io.github.srdjanv.tweakedpetroleum.core.TweakedPetroleumPlugin
