--- a/build.gradle
+++ b/build.gradle
@@ -154,6 +154,9 @@ localGitDependency {
 
     add('https://github.com/CleanroomMC/HadEnoughItems.git', {
         buildLauncher {
+            setExecutable(javaToolchains.launcherFor {
+                languageVersion = JavaLanguageVersion.of(8)
+            })
             startup {
                 mainTasks "setupCIWorkspace"
             }
