--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -38,6 +38,9 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
 
+      - name: Make Executable
+        run: chmod +x gradlew
+
       - name: Setup and execute Gradle 'build' task
         uses: gradle/gradle-build-action@v2
         with:
