Upgrade groovy script version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.daemon = false
 hei_version = 4.24.7
 
 # Mod Information
-tweaked_lib_version = 2.0.0
-groovy_script_version = 1.0.1
+tweaked_lib_version = 2.0.1
+groovy_script_version = 1.2.0-hotfix1
 
-mod_version = 2.0.1
+mod_version = 2.0.2
 maven_group = io.github.srdjanv
 archives_base_name = tweakedpetroleum
 
